--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,4 +9,16 @@ body {
     border: 1px solid black;
     border-radius: 10px;
     padding: 1rem;
+    display: grid;
+    gap: 1rem;
+    width: 20rem;
+}
+
+.container h1.judul {
+    text-align: center;
+}
+
+.container form {
+    display: grid;
+    gap: 1rem;
 }
