--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,6 +206,7 @@ footer p {
     transition: all 200ms;
     text-align: center;
     width: fit-content;
+    cursor: pointer;
 }
 
 .btn:hover {
